[project]
name = "dash-security"
version = "0.1.15"
description = "Building blocks for secure Dash development with Dash Pages"
readme = "README.md"

[tool.poetry]
name = "dash-security"
version = "0.1.15"
license = "MIT"
authors = ["Russell Romney"]
keywords = ["dash", "security", "callbacks", "plotly", "access", "authorization", "authentication", "flask", "python", "flask-login", "python3", "clients", "orgs", "emails"]
description = "Building blocks for secure Dash development with Dash Pages"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask-login = "^0.6.3"
dash = "^2.15.0"
python-dotenv = "^1.0.1"
bcrypt = "^4.1.2"
pydantic = "^2.6.1"
sqlalchemy = "^2.0.26"
flask-compress = "^1.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"






